--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -1,49 +1,15 @@
 openapi: 3.0.1
 info:
-  title: API heading
+  title: Keksipurkki Pet Clinic
   description: |2+
 
-    Description of why this API exits
+    Sample implementation of a REST API demonstrating
+    the lessons learned over the years on microservice
+    development.
+
+    Powered by Eclipse Vert.x — https://vertx.io
 
   version: 1.0.0
 servers:
 - url: http://localhost:8080/petclinic/v1
   variables: {}
-paths:
-  /greet:
-    get:
-      summary: Say hello
-      operationId: HELLO
-      responses:
-        default:
-          description: API error response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/JsonObject'
-      security:
-      - None: []
-  /meet:
-    get:
-      summary: Meet
-      operationId: MEET
-      responses:
-        default:
-          description: API error response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/JsonObject'
-      security:
-      - None: []
-components:
-  schemas:
-    JsonObject:
-      type: object
-      properties:
-        map:
-          type: object
-          additionalProperties:
-            type: object
-        empty:
-          type: boolean
