Implement update pet

--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -146,7 +146,7 @@ paths:
                 $ref: '#/components/schemas/Pet'
       security:
       - NONE: []
-    post:
+    put:
       tags:
       - pet
       description: Update an existing pet
