--- a/.editorconfig
+++ b/.editorconfig
@@ -47,7 +47,7 @@ tab_width = 4
 #ij_java_align_multiline_throws_list = false
 #ij_java_align_subsequent_simple_methods = false
 #ij_java_align_throws_keyword = false
-#ij_java_annotation_parameter_wrap = off
+#ij_java_annotation_parameter_wrap = o
 #ij_java_array_initializer_new_line_after_left_brace = false
 #ij_java_array_initializer_right_brace_on_new_line = false
 #ij_java_array_initializer_wrap = normal
@@ -123,7 +123,7 @@ tab_width = 4
 #ij_java_generate_final_locals = false
 #ij_java_generate_final_parameters = false
 #ij_java_if_brace_force = always
-#ij_java_imports_layout = java.**,|,javax.**,|,org.**,|,com.**,|,*,|,$*
+#ij_java_imports_layout = java.**, |, javax.**, |, org.**, |, com.**, |, *, |, $*
 #ij_java_indent_case_from_switch = false
 #ij_java_insert_inner_class_imports = false
 #ij_java_insert_override_annotation = true
@@ -146,8 +146,6 @@ tab_width = 4
 #ij_java_layout_static_imports_separately = true
 #ij_java_line_comment_add_space = false
 #ij_java_line_comment_at_first_column = true
-#ij_java_message_dd_suffix = EJB
-#ij_java_message_eb_suffix = Bean
 #ij_java_method_annotation_wrap = split_into_lines
 #ij_java_method_brace_style = end_of_line
 #ij_java_method_call_chain_wrap = on_every_item
@@ -157,7 +155,7 @@ tab_width = 4
 #ij_java_modifier_list_wrap = false
 #ij_java_names_count_to_use_import_on_demand = 99
 #ij_java_new_line_after_lparen_in_record_header = false
-#ij_java_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
+#ij_java_packages_to_use_import_on_demand = java.awt.*, javax.swing.*
 #ij_java_parameter_annotation_wrap = normal
 #ij_java_parentheses_expression_new_line_after_left_paren = false
 #ij_java_parentheses_expression_right_paren_on_new_line = false
@@ -173,13 +171,6 @@ tab_width = 4
 #ij_java_resource_list_right_paren_on_new_line = false
 #ij_java_resource_list_wrap = on_every_item
 #ij_java_rparen_on_new_line_in_record_header = false
-#ij_java_session_dd_suffix = EJB
-#ij_java_session_eb_suffix = Bean
-#ij_java_session_hi_suffix = Home
-#ij_java_session_lhi_prefix = Local
-#ij_java_session_lhi_suffix = Home
-#ij_java_session_li_prefix = Local
-#ij_java_session_si_suffix = Service
 #ij_java_space_after_closing_angle_bracket_in_type_argument = true
 #ij_java_space_after_colon = true
 #ij_java_space_after_comma = true
@@ -272,4 +263,5 @@ tab_width = 4
 #ij_java_wrap_comments = true
 #ij_java_wrap_first_method_in_call_chain = true
 #ij_java_wrap_long_lines = false
-
+#
+#
